--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,7 +4,11 @@
 <div class="row">
   <div class="span6 offset3">
     <%= form_for(@user) do |f| %>
-      <%= render 'shared/error_messages' %>
+
+      <%= render 'shared/error_messages', object: f.object %>
+      <%= render 'fields', f: f %>
+
+    <!--
 
       <%= f.label :name %>
       <%= f.text_field :name %>
@@ -18,10 +22,12 @@
       <%= f.label :password_confirmation, "Confirm Password" %>
       <%= f.password_field :password_confirmation %>
 
+    -->
+
       <%= f.submit "Save changes", class: "btn btn-large btn-primary" %>
     <% end %>
 
     <%= gravatar_for @user %>
-    <a href="http://gravatar.com/emails">change</a>
+    <a href="http://gravatar.com/emails" TARGET="_blank">change</a>
   </div>
 </div>
